#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([ACTS], [0.1], [acts@gmail.com])
AC_CONFIG_SRCDIR([TraderSpi.cpp])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE(ACTS, 0.1)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.
AC_LANG_CPLUSPLUS
AC_CHECK_LIB([pq], [main], [], AC_ERROR([libpq is required]))
AC_CHECK_LIB([pqxx], [main], [], AC_ERROR([libpqxx is required]))

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL

# Checks for library functions.
AC_CHECK_FUNCS([memset])

AC_OUTPUT([Makefile])
